oauth/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  namespace: ext-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: proxy
    spec:
      serviceAccountName: ext-auth
      containers:
      - name: oauth-proxy
        image: quay.io/openshift/origin-oauth-proxy:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8180
          name: public
        args:
        - --http-address=:8180
        - --provider=openshift
        - --openshift-service-account=ext-auth
        # - --client-id=dashboard-oauth-client  # using ^ SA as client 
        # - --client-secret-file=/etc/oauth/client/secret
        - --upstream=http://localhost:5678
        - --tls-cert=/etc/tls/private/tls.crt
        - --tls-key=/etc/tls/private/tls.key
        - --cookie-secret-file=/etc/oauth/config/cookie_secret
        - --cookie-expire=23h0m0s
        - --cookie-secret=SECRET
        - --pass-access-token
        - --pass-user-bearer-token 
        # - --scope=user:full  # from odh-dash deployment, unsure if necessary.
        volumeMounts:
        - mountPath: /etc/tls/private
          name: proxy-tls
        - mountPath: /etc/oauth/config
          name: oauth-config
        - mountPath: /etc/oauth/client
          name: oauth-client
      - name: http-https-echo
        image: docker.io/hashicorp/http-echo:alpine
        imagePullPolicy: IfNotPresent
        ports:
          - name: echo-port
            containerPort: 5678
        args:
          - -text=helloproxy
      volumes:
        - name: proxy-tls
          secret:
            secretName: proxy-tls
        - name: oauth-config
          secret:
            secretName: oauth-config-generated
        - name: oauth-client
          secret:
            secretName: dashboard-oauth-client-generated
