oauth/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: proxy
spec:
  port:
    targetPort: 8180
  to:
    kind: Service
    name: proxy
    weight: 100
